--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "netlify-lambda": "^1.4.3",
     "serverless-http": "^1.9.1"
   },
-  "devDependencies": {},
-  "scripts": {
-    "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
-    "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   },
+"scripts": {
+    "start": "cross-env NODE_ENV=development netlify-lambda serve src",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production netlify-lambda build src"
+},
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/owenconti/netlify-express.git"
